[package]
name = "loadbalancer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
network-types = "0.0.4"
memoffset = "0.9.0"
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
loadbalancer-common = { path = "../loadbalancer-common" }

[[bin]]
name = "loadbalancer"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
