[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
loadbalancer-common = { path = "../loadbalancer-common", features = ["user"] }
anyhow = "1"
rlimit = "0.9.1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.4.0"

[[bin]]
name = "loadbalancer"
path = "src/main.rs"
